--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,7 +57,7 @@
 	--primary: #4b2615;
 	--primary-foreground: #ffffff;
 
-	--secondary: oklch(0.97 0 0);
+	--secondary: #643f2e;
 	--secondary-foreground: oklch(0.205 0 0);
 	--muted: oklch(0.97 0 0);
 	--muted-foreground: oklch(0.556 0 0);
@@ -95,7 +95,7 @@
 	--primary: #4b2615;
 	--primary-foreground: #ffffff;
 
-	--secondary: oklch(0.269 0 0);
+	--secondary: #643f2e;
 	--secondary-foreground: oklch(0.985 0 0);
 	--muted: oklch(0.269 0 0);
 	--muted-foreground: oklch(0.708 0 0);
